--- a/templates/activity.html
+++ b/templates/activity.html
@@ -1,7 +1,7 @@
 <ion-header-bar class="bar-positive">
     <a href="#"><button class="button button-icon ion-ios7-arrow-back"></button></a>
     <h1 class="title">Activity</h1>
-    <button class="button button-icon ion-edit" ng-hide="activity.completed"></button>
+    <button class="button button-icon ion-edit" ng-hide="activity.completed" ng-click="editActivity()"></button>
 </ion-header-bar>
 
 <ion-content class="has-header padding align-center">
@@ -41,7 +41,7 @@
             <div class="row">
                 <div class="col col-30">Context:</div>
                 <div class="col">
-                    <span ng-repeat="item in activity.context">{{item}}<span ng-show="!$last ">, </span></span>
+                    <span ng-repeat="(key, item) in activity.context" ng-show="item">{{key}}<span ng-show="!$last ">, </span></span>
 
                 </div>
             </div>
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col col-30">For:</div>
                 <div class="col">
-                    <span ng-repeat="user in activity.forUsers">{{user}}<span ng-show="!$last ">, </span></span>
+                    <span ng-repeat="(key, user) in activity.forUsers" ng-show="user">{{key}}<span ng-show="!$last ">, </span></span>
                 </div>
             </div>
 
@@ -72,3 +72,96 @@
 
 
 </ion-content>
+
+<script id="edit-activity.html" type="text/ng-template">
+    <div class="modal">
+
+        <ion-header-bar class="bar-stable">
+            <h1 class="title">Edit Activity</h1>
+            <button class="button button-clear button-positive" ng-click="closeEditActivity()">Cancel</button>
+        </ion-header-bar>
+        <ion-content>
+            <form ng-submit="saveActivity(); closeEditActivity()">
+                <div class="list">
+                    <label class="item item-input">
+                        <span class="input-label">Activity</span>
+                        <input ng-model="activity.title" type="text" placeholder="Action you want to take">
+                    </label>
+                    <label class="item item-input">
+                        <span class="input-label">Urgency</span>
+                        <select ng-model="activity.urgency">
+                            <option value=3>Urgent</option>
+                            <option value=2 selected>Needs be done</option>
+                            <option value=1>Not essential</option>
+                        </select>
+                    </label>
+                    <label class="item item-input">
+                        <span class="input-label">Duration</span>
+                        <input type="number" ng-model="activity.duration">
+                    </label>
+
+                    <li class="item item-divider">
+                        Context:
+                    </li>
+                    <li class="item item-checkbox">
+                        <label class="checkbox">
+                            <input type="checkbox" ng-model="activity.context.home">
+                        </label>
+                        <i class="icon ion-home"></i> At Home
+                    </li>
+
+                    <li class="item item-checkbox">
+                        <label class="checkbox">
+                            <input type="checkbox" ng-model="activity.context.errand">
+                        </label>
+                        <i class="icon ion-bag"></i> Errand
+                    </li>
+
+                    <li class="item item-checkbox">
+                        <label class="checkbox">
+                            <input type="checkbox" ng-model="activity.context.computer">
+                        </label>
+                        <i class="icon ion-laptop"></i> At Computer
+                    </li>
+
+                    <li class="item item-checkbox">
+                        <label class="checkbox">
+                            <input type="checkbox" ng-model="activity.context.fun">
+                        </label>
+                        <i class="icon ion-happy"></i> For fun
+                    </li>
+
+                    <li class="item item-divider">
+                        For:
+                    </li>
+
+                    <li class="item item-checkbox">
+                        <label class="checkbox">
+                            <input type="checkbox" ng-model="activity.forUsers.evi">
+                        </label>
+                        <i class="icon ion-woman"></i> Evi
+                    </li>
+
+                    <li class="item item-checkbox">
+                        <label class="checkbox">
+                            <input type="checkbox" ng-model="activity.forUsers.toma">
+                        </label>
+                        <i class="icon ion-man"></i> Toma
+                    </li>
+
+
+                    <label class="item item-input">
+                        <!--<span class="input-label">Note</span>-->
+                        <textarea placeholder="Instructions" ng-model="activity.instructions"></textarea>
+                    </label>
+
+                    <label class="item">
+                        <button class="button button-block button-positive" type="submit">Save</button>
+                    </label>
+                </div>
+
+            </form>
+        </ion-content>
+    </div>
+
+</script>
