add delete activity

--- a/templates/activity.html
+++ b/templates/activity.html
@@ -68,9 +68,7 @@
             </div>
         </div>
     </div>
-
-
-
+    <button class="button" ng-click="deleteActivity()">Delete</button>
 </ion-content>
 
 <script id="edit-activity.html" type="text/ng-template">
