--- a/templates/activity.html
+++ b/templates/activity.html
@@ -63,12 +63,12 @@
             <div class="row">
                 <div class="col col-30">Added on:</div>
                 <div class="col">
-                    {{activity.date  | date}}
+                    {{activity.date | date}}
                 </div>
             </div>
         </div>
     </div>
-    <button class="button" ng-click="deleteActivity()">Delete</button>
+    <button class="button button-clear" ng-click="deleteActivity()">Delete</button>
 </ion-content>
 
 <script id="edit-activity.html" type="text/ng-template">
