--- a/css/styles.css
+++ b/css/styles.css
@@ -10,36 +10,18 @@ ion-nav-view {
 .crossedOut {
     text-decoration: line-through;
 }
-/*#activityList .toggle {*/
-    /*text-align: center;*/
-    /*width: 20px;*/
-    /* auto, since non-WebKit browsers doesn't support input styling */
-    /*height: auto;*/
-    /*position: absolute;*/
-    /*top: 0;*/
-    /*bottom: 0;*/
-    /*margin: auto 0;*/
-    /* Mobile Safari */
-    /*border: none;*/
-    /*-webkit-appearance: none;*/
-    /*-ms-appearance: none;*/
-    /*-o-appearance: none;*/
-    /*appearance: none;*/
-/*}*/
 
-/*#activityList .toggle:after {*/
-    /*content: '✔';*/
-    /* 40 + a couple of pixels visual adjustment */
-    /*line-height: 43px;*/
-    /*font-size: 20px;*/
-    /*color: #d9d9d9;*/
-    /*text-shadow: 0 -1px 0 #bfbfbf;*/
-/*}*/
+.badge {
+    position: relative; right: 1em !important;
+}
 
-/*#activityList .toggle:checked:after {*/
-    /*color: #85ada7;*/
-    /*content: '✔';*/
-    /*text-shadow: 0 1px 0 #669991;*/
-    /*bottom: 1px;*/
-    /*position: relative;*/
-/*}*/
+.sorting {
+    font-size: 0.9em;
+    font-weight: normal;
+    text-align: right;
+}
+
+.sorting a {
+    color: #000;
+    /*text-decoration: dotted;*/
+}
