--- a/templates/activities.html
+++ b/templates/activities.html
@@ -1,26 +1,27 @@
 <ion-header-bar class="bar-positive">
+    <a href="#/done"><button class="button button-icon ion-checkmark"></button></a>
     <h1 class="title">What Now</h1>
-    <button class="button button-icon ion-lightbulb" ng-click="newActivity()"></button>
+    <button class="button button-icon ion-compose" ng-click="newActivity()"></button>
 </ion-header-bar>
 <div class="bar bar-subheader tabs tabs-icon-left bar-neutral">
     <!--<a class="tab-item" >All</a>-->
-    <a class="tab-item" ng-model="eviFilter" ng-click="eviFilter = !eviFilter" ng-class="{active: eviFilter}"><i class="icon ion-woman"></i> Evi</a>
-    <a class="tab-item" ng-model="tomaFilter" ng-click="tomaFilter = !tomaFilter" ng-class="{active: tomaFilter}"><i class="icon ion-man"></i> Toma</a>
+
+    <a class="tab-item" ng-model="eviFilter" ng-click="eviFilter = !eviFilter" ng-class="{positive: eviFilter}"><i class="icon ion-woman"></i> Evi</a>
+    <a class="tab-item" ng-model="tomaFilter" ng-click="tomaFilter = !tomaFilter" ng-class="{positive: tomaFilter}"><i class="icon ion-man"></i> Toma</a>
+    <!--most urgent and shortest-->
     <!--<a class="tab-item">Momo</a>-->
 </div>
 
 <ion-content class="has-header has-subheader">
     <ion-list>
-        <!--show no activities if nothing-->
-        <ion-item ng-repeat="activity in activities | orderBy: '-urgency'"
+        <ion-item class="item item-divider sorting">
+            sorted by most urgent and <a href="" ng-click="switchSorting()">shortest</a>
+        </ion-item>
+        <ion-item ng-repeat="activity in activities | orderBy: 'duration'"
                   ng-hide="hide(activity)" href="#/activity/{{activity.$id}}">
-            <span ng-show="activity.completed">&#10004;</span>
-            <span ng-class={crossedOut:activity.completed}>{{activity.title}}</span>
-            <!--<br />-->
-            <!--{{activity.completed}}-->
-            <!--{{activity.context}}-->
-            <!--{{activity.forUsers}}-->
+            <span>{{activity.title}}</span>
             <span class="badge badge-light">{{activity.urgency}}</span>
+            <span class="item-note">{{activity.duration || ""}} min</span>
         </ion-item>
     </ion-list>
 </ion-content>
@@ -119,16 +120,16 @@
 </script>
 
 <div class="tabs tabs-bottom tabs-icon-only tabs-neutral">
-    <a class="tab-item" ng-model="homeFilter" ng-click="homeFilter = !homeFilter" ng-class="{active: homeFilter}">
+    <a class="tab-item" ng-model="homeFilter" ng-click="homeFilter = !homeFilter" ng-class="{assertive: homeFilter}">
         <i class="icon ion-home"></i>
     </a>
-    <a class="tab-item" ng-model="errandFilter" ng-click="errandFilter = !errandFilter" ng-class="{active: errandFilter}">
+    <a class="tab-item" ng-model="errandFilter" ng-click="errandFilter = !errandFilter" ng-class="{assertive: errandFilter}">
         <i class="icon ion-bag"></i>
     </a>
-    <a class="tab-item" ng-model="computerFilter" ng-click="computerFilter = !computerFilter" ng-class="{active: computerFilter}">
+    <a class="tab-item" ng-model="computerFilter" ng-click="computerFilter = !computerFilter" ng-class="{assertive: computerFilter}">
         <i class="icon ion-laptop"></i>
     </a>
-    <a class="tab-item" ng-model="funFilter" ng-click="funFilter = !funFilter" ng-class="{active: funFilter}">
+    <a class="tab-item" ng-model="funFilter" ng-click="funFilter = !funFilter" ng-class="{assertive: funFilter}">
         <i class="icon ion-happy"></i>
     </a>
     <!--<a class="tab-item">-->
