--- a/templates/activities.html
+++ b/templates/activities.html
@@ -14,10 +14,10 @@
 
 <ion-content class="has-header has-subheader">
     <ion-list>
-        <ion-item class="item item-divider sorting">
-            sorted by most urgent and <a href="" ng-click="switchSorting()">shortest</a>
-        </ion-item>
-        <ion-item ng-repeat="activity in activities | orderBy: 'duration'"
+        <!--<ion-item class="item item-divider sorting">-->
+            <!--sorted by most urgent and <a href="" ng-click="switchSorting()">shortest</a>-->
+        <!--</ion-item>-->
+        <ion-item ng-repeat="activity in activities | orderByPriority | orderBy: ['-urgency', '-duration']"
                   ng-hide="hide(activity)" href="#/activity/{{activity.$id}}">
             <span>{{activity.title}}</span>
             <span class="badge badge-light">{{activity.urgency}}</span>
