--- a/templates/activity.html
+++ b/templates/activity.html
@@ -13,7 +13,13 @@
         <div class="row">
             <div class="col col-30">Completed</div>
             <div class="col">
-                <input type="checkbox" ng-model="activity.completed" ng-change="saveActivity()">
+                <label class="toggle">
+                    <input type="checkbox" ng-model="activity.completed" ng-change="saveActivity()">
+                    <div class="track">
+                        <div class="handle"></div>
+                    </div>
+                </label>
+                <!--<input type="checkbox" ng-model="activity.completed" ng-change="saveActivity()">-->
             </div>
         </div>
         <div class="row" ng-show="activity.completed">
@@ -21,7 +27,8 @@
             <div class="col">
                 <!--ng-change only fires once?-->
                 <select ng-model="activity.completedBy" ng-change="saveActivity()">
-                    <option value="none">Both/None</option>
+                    <option value="" disabled selected>Select a user</option>
+                    <option value="all">All</option>
                     <option value="evi">Evi</option>
                     <option value="toma">Toma</option>
                 </select>
