--- a/templates/activity.html
+++ b/templates/activity.html
@@ -14,7 +14,7 @@
             <div class="col col-30">Completed</div>
             <div class="col">
                 <label class="toggle">
-                    <input type="checkbox" ng-model="activity.completed" ng-change="saveActivity()">
+                    <input type="checkbox" ng-model="activity.completed" ng-change="saveCompleted()">
                     <div class="track">
                         <div class="handle"></div>
                     </div>
@@ -26,7 +26,7 @@
             <div class="col col-30">By:</div>
             <div class="col">
                 <!--ng-change only fires once?-->
-                <select ng-model="activity.completedBy" ng-change="saveActivity()">
+                <select ng-model="activity.completedBy" ng-change="saveDoer()">
                     <option value="" disabled selected>Select a user</option>
                     <option value="all">All</option>
                     <option value="evi">Evi</option>
@@ -76,6 +76,11 @@
         </div>
     </div>
     <button class="button button-clear" ng-click="deleteActivity()">Delete</button>
+
+    <div>
+        <p>Evi has {{users.evi.points}} points.<br />
+        Toma has {{users.toma.points}} points.</p>
+    </div>
 </ion-content>
 
 <script id="edit-activity.html" type="text/ng-template">
