add points for difficulty (duration), change db

--- a/templates/activities.html
+++ b/templates/activities.html
@@ -49,10 +49,10 @@
                         <input ng-model="newActivity.title" type="text" placeholder="Action you want to take">
                     </label>
                     <label class="item item-input">
-                        <span class="input-label">Urgency</span>
+                        <span class="input-label">Importance</span>
                         <select ng-model="newActivity.urgency">
-                            <option value=3>Urgent</option>
-                            <option value=2 selected>Needs be done</option>
+                            <option value=3>Very Important</option>
+                            <option value=2 selected>Needs to be done</option>
                             <option value=1>Not essential</option>
                         </select>
                     </label>
