--- a/templates/activity.html
+++ b/templates/activity.html
@@ -78,6 +78,7 @@
     <button class="button button-primary" ng-click="deleteActivity()">Delete</button>
 
     <div>
+        <p>points given: {{activity.completed.points}}</p>
         <p>Evi has {{users.evi.points}} points.<br />
         Toma has {{users.toma.points}} points.</p>
     </div>
