--- a/templates/activities.html
+++ b/templates/activities.html
@@ -1,7 +1,7 @@
 <ion-header-bar class="bar-positive">
     <a href="#/done"><button class="button button-icon ion-checkmark"></button></a>
     <h1 class="title">What Now</h1>
-    <button class="button button-icon ion-compose" ng-click="newActivity()"></button>
+    <button class="button button-icon ion-compose" ng-click="newActivityModal.show()"></button>
 </ion-header-bar>
 <div class="bar bar-subheader tabs tabs-icon-left bar-neutral">
     <!--<a class="tab-item" >All</a>-->
@@ -33,99 +33,6 @@
         </ion-item>
     </ion-list>
 </ion-content>
-
-<script id="new-activity.html" type="text/ng-template">
-    <div class="modal">
-
-        <ion-header-bar class="bar-stable">
-            <h1 class="title">New Activity</h1>
-            <button class="button button-clear button-positive" ng-click="closeNewActivity()">Cancel</button>
-        </ion-header-bar>
-        <ion-content>
-            <form ng-submit="addActivity()">
-                <div class="list">
-                    <label class="item item-input">
-                        <span class="input-label">Activity</span>
-                        <input ng-model="newActivity.title" type="text" placeholder="Action you want to take">
-                    </label>
-                    <label class="item item-input">
-                        <span class="input-label">Importance</span>
-                        <select ng-model="newActivity.urgency">
-                            <option value=3>Important</option>
-                            <option value=2 selected>Needs to be done</option>
-                            <option value=1>Not essential</option>
-                        </select>
-                    </label>
-                    <label class="item item-input">
-                        <span class="input-label">Minutes</span>
-                        <input type="number" ng-model="newActivity.duration">
-                    </label>
-
-                    <li class="item item-divider">
-                        Context:
-                    </li>
-                    <li class="item item-checkbox">
-                        <label class="checkbox">
-                            <input type="checkbox" ng-model="newActivity.home">
-                        </label>
-                        <i class="icon ion-home"></i> At Home
-                    </li>
-
-                    <li class="item item-checkbox">
-                        <label class="checkbox">
-                            <input type="checkbox" ng-model="newActivity.errand">
-                        </label>
-                        <i class="icon ion-bag"></i> Errand
-                    </li>
-
-                    <li class="item item-checkbox">
-                        <label class="checkbox">
-                            <input type="checkbox" ng-model="newActivity.computer">
-                        </label>
-                        <i class="icon ion-laptop"></i> At Computer
-                    </li>
-
-                    <li class="item item-checkbox">
-                        <label class="checkbox">
-                            <input type="checkbox" ng-model="newActivity.fun">
-                        </label>
-                        <i class="icon ion-happy"></i> For fun
-                    </li>
-
-                    <li class="item item-divider">
-                        For:
-                    </li>
-
-                    <li class="item item-checkbox">
-                        <label class="checkbox">
-                            <input type="checkbox" ng-model="newActivity.evi">
-                        </label>
-                        <i class="icon ion-woman"></i> Evi
-                    </li>
-
-                    <li class="item item-checkbox">
-                        <label class="checkbox">
-                            <input type="checkbox" ng-model="newActivity.toma">
-                        </label>
-                        <i class="icon ion-man"></i> Toma
-                    </li>
-
-
-                    <label class="item item-input">
-                        <!--<span class="input-label">Note</span>-->
-                        <textarea placeholder="Instructions" ng-model="newActivity.instructions"></textarea>
-                    </label>
-
-                    <label class="item">
-                        <button class="button button-block button-positive" type="submit">Add</button>
-                    </label>
-                </div>
-
-            </form>
-        </ion-content>
-    </div>
-
-</script>
 
 <div class="tabs tabs-bottom tabs-icon-only tabs-neutral">
     <a class="tab-item" ng-model="homeFilter" ng-click="homeFilter = !homeFilter" ng-class="{assertive: homeFilter}">
