--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,27 +1,27 @@
-<div class="modal" ng-controller="newActivityCtrl">
+<div class="modal" ng-controller="editActivityCtrl">
 
     <ion-header-bar class="bar-stable">
-        <h1 class="title">New Activity</h1>
-        <button class="button button-clear button-positive" ng-click="newActivityModal.hide()">Cancel</button>
+        <h1 class="title">Edit Activity</h1>
+        <button class="button button-clear button-positive" ng-click="editModal.hide()">Cancel</button>
     </ion-header-bar>
     <ion-content>
-        <form ng-submit="addActivity()">
+        <form ng-submit="editActivity($scope.id); editModal.hide()">
             <div class="list">
                 <label class="item item-input">
                     <span class="input-label">Activity</span>
-                    <input ng-model="newActivity.title" type="text" placeholder="Action you want to take">
+                    <input ng-model="activity.title" type="text" placeholder="Action you want to take">
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Importance</span>
-                    <select ng-model="newActivity.urgency">
-                        <option value=3>Important</option>
+                    <select ng-model="activity.urgency">
+                        <option value=3>Very Important</option>
                         <option value=2 selected>Needs to be done</option>
                         <option value=1>Not essential</option>
                     </select>
                 </label>
                 <label class="item item-input">
-                    <span class="input-label">Minutes</span>
-                    <input type="number" ng-model="newActivity.duration">
+                    <span class="input-label">Duration</span>
+                    <input type="number" ng-model="activity.duration">
                 </label>
 
                 <li class="item item-divider">
@@ -29,28 +29,28 @@
                 </li>
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                        <input type="checkbox" ng-model="newActivity.home">
+                        <input type="checkbox" ng-model="activity.context.home">
                     </label>
                     <i class="icon ion-home"></i> At Home
                 </li>
 
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                        <input type="checkbox" ng-model="newActivity.errand">
+                        <input type="checkbox" ng-model="activity.context.errand">
                     </label>
                     <i class="icon ion-bag"></i> Errand
                 </li>
 
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                        <input type="checkbox" ng-model="newActivity.computer">
+                        <input type="checkbox" ng-model="activity.context.computer">
                     </label>
                     <i class="icon ion-laptop"></i> At Computer
                 </li>
 
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                        <input type="checkbox" ng-model="newActivity.fun">
+                        <input type="checkbox" ng-model="activity.context.fun">
                     </label>
                     <i class="icon ion-happy"></i> For fun
                 </li>
@@ -61,14 +61,14 @@
 
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                        <input type="checkbox" ng-model="newActivity.evi">
+                        <input type="checkbox" ng-model="activity.forUsers.evi">
                     </label>
                     <i class="icon ion-woman"></i> Evi
                 </li>
 
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                        <input type="checkbox" ng-model="newActivity.toma">
+                        <input type="checkbox" ng-model="activity.forUsers.toma">
                     </label>
                     <i class="icon ion-man"></i> Toma
                 </li>
@@ -76,11 +76,11 @@
 
                 <label class="item item-input">
                     <!--<span class="input-label">Note</span>-->
-                    <textarea placeholder="Instructions" ng-model="newActivity.instructions"></textarea>
+                    <textarea placeholder="Instructions" ng-model="activity.instructions"></textarea>
                 </label>
 
                 <label class="item">
-                    <button class="button button-block button-positive" type="submit">Add</button>
+                    <button class="button button-block button-positive" type="submit">Save</button>
                 </label>
             </div>
 
