use single form template for adding and editing

--- a/templates/activities.html
+++ b/templates/activities.html
@@ -1,7 +1,7 @@
 <ion-header-bar class="bar-positive">
     <a href="#/done"><button class="button button-icon ion-checkmark"></button></a>
     <h1 class="title">What Now</h1>
-    <button class="button button-icon ion-compose" ng-click="addModal.show()"></button>
+    <button class="button button-icon ion-compose" ng-click="openActivityForm()"></button>
 </ion-header-bar>
 <div class="bar bar-subheader tabs tabs-icon-left bar-neutral">
     <!--<a class="tab-item" >All</a>-->
