--- a/templates/activity.html
+++ b/templates/activity.html
@@ -1,7 +1,7 @@
 <ion-header-bar class="bar-positive">
     <a href="#"><button class="button button-icon ion-ios7-arrow-back"></button></a>
     <h1 class="title">Activity</h1>
-    <button class="button button-icon ion-edit" ng-hide="activity.completed.done" ng-click="editModal.show()"></button>
+    <button class="button button-icon ion-edit" ng-hide="activity.completed.done" ng-click="openActivityForm()"></button>
 </ion-header-bar>
 
 <ion-content class="has-header padding">
